
option java_outer_classname="RemoveCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message RemoveCommand {
	optional string key = 1;
	optional int64 requestId = 2;
	optional int32 flag = 3;
	optional string lockId = 4;
	optional int32 lockAccessType = 5;
}
